--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "emojionearea": "^3.4.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
