--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "sweetalert": "^2.1.2"
   }
 }
